# LogManager

./: .gitignore  1.html  2.html  3.html  CMakeLists.txt  README.md  bb.py  c.cpp  dtest.cpp  jb.py
examples/: analyser.cpp  temp2.cpp  test.cpp
include/: arg_parser.h  console_sink.h  file_sink.h  log_level.h  log_manager.h  log_mesage.h  sink.h
src/: arg_parser.cpp  console_sink.cpp  file_sink.cpp  log_level.cpp  log_manager.cpp
